force-app/main/default/objects/Event__c/fields/Budget_Contingency__c.field-meta.xml
<CustomField>
    <fullName>Budget_Contingency__c</fullName>
    <inlineHelpText>Depending on the size or complexity of this event, you may want to add as much as up to 20% as a contingency.</inlineHelpText>
    <label>Presupuesto de contingencia</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>