force-app/main/default/objects/Event__c/fields/Budget_Decor__c.field-meta.xml
<CustomField>
    <fullName>Budget_Decor__c</fullName>
    <inlineHelpText>Included expenses for decor, such as centerpieces, florals, tent rentals, etc.</inlineHelpText>
    <label>Presupuesto de decoración</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>