force-app/main/default/objects/Event__c/fields/Event_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Event_End_Date__c</fullName>
    <label>Finalización de evento</label>
    <type>DateTime</type>
</CustomField>