force-app/main/default/objects/Event__c/fields/Online_Meeting_Details__c.field-meta.xml
<CustomField>
    <fullName>Online_Meeting_Details__c</fullName>
    <description>URL and Dial info for the online meeting</description>
    <inlineHelpText>URL and Dial info for an online meeting</inlineHelpText>
    <label>Online Meeting Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>