force-app/main/default/objects/Event__c/fields/Online_Passcode__c.field-meta.xml
<CustomField>
    <fullName>Online_Passcode__c</fullName>
    <description>Passcode for the online meeting</description>
    <inlineHelpText>Passcode for the online meeting</inlineHelpText>
    <label>Online Passcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>