force-app/main/default/objects/Event__c/fields/Parent_Event__c.field-meta.xml
<CustomField>
    <fullName>Parent_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Event</label>
    <referenceTo>Event__c</referenceTo>
    <relationshipLabel>Events</relationshipLabel>
    <relationshipName>Events</relationshipName>
    <type>Lookup</type>
</CustomField>