force-app/main/default/objects/Event__c/fields/Recurrence__c.field-meta.xml
<CustomField>
    <fullName>Recurrence__c</fullName>
    <description>Frequency of the event recurrence</description>
    <inlineHelpText>Frequency of the event recurrence.  Creation of recurring events only occurs on record creation.   Event Start Date and Recurrence End Date are required fields to create recurring events.</inlineHelpText>
    <label>Recurrence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Daily - Weekdays Only</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly (30 days)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>