force-app/main/default/objects/Event__c/fields/Recurrence_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Recurrence_End_Date__c</fullName>
    <description>Date the recurrence of events end</description>
    <inlineHelpText>Date the recurrence of events end</inlineHelpText>
    <label>Recurrence End Date</label>
    <type>Date</type>
</CustomField>