force-app/main/default/objects/Event__c/fields/Send_Email_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>Send_Email_Confirmation__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If &apos;True&apos; send email confirmation at the time that a registration is added. Be advised that these sent emails apply toward your daily email limits.</inlineHelpText>
    <label>Send Email Confirmation</label>
    <type>Checkbox</type>
</CustomField>