force-app/main/default/objects/Event__c/validationRules/Create_Start_Date_In_Past.validationRule-meta.xml
<ValidationRule>
    <fullName>Create_Start_Date_In_Past</fullName>
    <active>true</active>
    <description>Start date for newly created events can&apos;t be in the past.</description>
    <errorConditionFormula>AND( ISNEW(),  Event_Start_Date__c &lt; NOW())</errorConditionFormula>
    <errorDisplayField>Event_Start_Date__c</errorDisplayField>
    <errorMessage>The start date/time for an event can&apos;t be in the past.</errorMessage>
</ValidationRule>