force-app/main/default/objects/Event__c/validationRules/End_Date_b4_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_b4_Start_Date</fullName>
    <active>true</active>
    <description>The End Date can&apos;t be before the start date.</description>
    <errorConditionFormula>OR ((Event_End_Date__c &lt;  Event_Start_Date__c), AND(ISNULL(Event_Start_Date__c), NOT(ISNULL(Event_End_Date__c))))</errorConditionFormula>
    <errorDisplayField>Event_End_Date__c</errorDisplayField>
    <errorMessage>The end Date can&apos;t be earlier than the start date.</errorMessage>
</ValidationRule>