force-app/main/default/objects/Event__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Event_Start_Date__c</columns>
    <columns>Event_End_Date__c</columns>
    <columns>Venue__c</columns>
    <columns>Registered_Attendees__c</columns>
    <columns>Maximum_Registration__c</columns>
    <columns>Event_Manager__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>